Add age group filter, embeddable map widget, and documentation
- Add age_group field (Youth / Adult / Youth and Adult) to listings
  with admin form controls and public map filter dropdown
- Default map view to Youth services
- Create embeddable map widget at /#/embed with compact UI
- Add embed.js script for one-line embedding on third-party sites
- Add embed code generator page at /#/embed-code with live preview
- Hyperlink partners on About page (Casper Youth Hub, Unicorn Solutions,
  Oregon Youth Resource Map, Healthy Transitions, Mapping Action Collective)
- Rename nav title to "Wyoming Resource Map"
- Make map center/zoom configurable via siteConfig.json
- Update README with embedding docs, site config reference, and new files

Made-with: Cursor

--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -1,6 +1,6 @@
 {
   "siteName": "Wyoming Youth Resource Map",
-  "siteNameShort": "WY Youth Map",
+  "siteNameShort": "Wyoming Resource Map",
   "organizationName": "Casper Youth Hub",
   "partnerName": "Unicorn Solutions",
   "tagline": "Find youth-serving resources across Wyoming for ages 11–20",
